--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title><p>Let's talk about me!!!</p></title>
+    </head>
+    <body></body>
+</html>
+
 <p>Kyle can do cool things</p>
