--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 
 <html>
     <head>
-        <title><p>Let's talk about me!!!</p></title>
+        <title>The Gods of the Medven people</title>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1>The Gods of the Medven People</h1>
+        </header>
+        <main>
+            <h2>Halak</h2>
+            <p>
+                'Warrior-King of all the gods, patron of courage, honor, and those who fight in defense of their people. Early legends from the dawn of Medven culture state that the first Bear-King 
+                defeated him in a wrestling match deep in the forest, and was rewarded with great strength and wisdom, as well as the legenday axe Bloodclaw. Thus was he able to unite the various clans in the Millenial Forest and create
+                the first unified kingdom. For decades he reigned as a wise and fair monarch, and the Medven flourished. However, King Ironfang, as he was later known, would in time ignore this wisdom,
+                choosing to trust only his great strength. It is said that during a raid on a neighboring kingdom, launched under poor provocation, the axe slipped from his grasp suddenly, and the King was struck down. Witneses claim
+                that as he raised his hand to strike, the axe seemed to throw itself from his grasp, exposing him to a fatal spear thrust. Halak rewards only the just.'
+            </p>
+            <h2>Mimir</h2>
+            <p>
+                God of memory and knowledge. He is the patron of the skjalds, and loves the accumulation of knowledge throughout the world. The skjalds don't believe in keeping knowledge and lore a secret, and believe it should be shared
+                with everyone who wants it. This doesn't mean they dont have personal secrets, or go around telling everybody everything they know, they will gladly share their sagas and epics with locals and foreigners alike.
+                Furthermore, any Medven child can demand to be made a student of the skjald in order to pass on their knowledge, which the priest must accept, provided that the youth is able to prove their dedication to a life of scholarship 
+                and wandering. The skjaldic priesthood is bound to a nomadic life, moving from village to village collecting stories and spreading their knowledge throughout the world. Especially talented and dedicated skjalds are said to be 
+                blessed with a perfect memory, and there is a common legend amongst the priesthood that if one of their number can become talented enough, Mimir himself will whisper new stories in his ear while he is sleeping, so that it may be
+                spread to the world.
+            </p>
+            <h2>Thelenelok</h2>
+            <p>
+                God of the Dead and the veneration of ancestors. Also of mead! Even though drinks like beer and wine are casually drank as a part of every day life, mead is only consumed as a part of funeral processions and celebrations of the 
+                honored dead. The brewing of mead is a scared art passed down amongst the Heralds of the Hall, an order of women who prepare the dead for burial and maintain their resting places. Mead is only drank on special occasions, where 
+                the bitterness of death is offset by the sweetness of the drink. Unlike in some primitive cultures, the Medven people do not believe one needs to die in battlein order to reach the afterlife. Once just has to reach the pinnacle of 
+                their chosen profession. All are welcome in Thelenelok's halls, so long as they lived in accordance with their own ideals.
+            </p>
+
+        </main>
+    </body>
 </html>
 
-<p>Kyle can do cool things</p>
+<p>My truly original DnD Pantheon</p>
