--- a/index.html
+++ b/index.html
@@ -3,23 +3,11 @@
 <html>
 
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>The Gods of the Medven people</title>
     </head>
     <body>
-        <style>
-        body {
-            padding-top: 25px;
-            padding-bottom: 25px;
-            padding-left: 25px;
-            padding-right: 25px;
-            border: 10px groove black;
-            margin-top: 100px;
-            margin-bottom: 100px;
-            margin-right: 150px;
-            margin-left: 80px;
-            background-color: rgba(25, 51, 59, 0.473);
-        }
-        </style>
+        
         <header>
             <h1>The Gods of the Medven People</h1>
         </header>
@@ -27,7 +15,7 @@
            <article>
                <section>
             <a name='Halak'></a>
-             <h2>Halak</h2>
+             <h2 id="name">Halak</h2>
             <p>
                 Warrior-King of all the gods, patron of courage, honor, and those who fight in defense of their people. Early legends from the dawn of Medven culture state that the first Bear-King 
                 defeated him in a wrestling match deep in the forest, and was rewarded with great strength and wisdom, as well as the legenday axe Bloodclaw. Thus was he able to unite the various clans in the Millenial Forest and create
@@ -38,7 +26,7 @@
                 choosing to trust only his great strength. It is said that during a raid on a neighboring kingdom, launched under poor provocation, the axe slipped from his grasp suddenly, and the King was struck down. Witneses claim
                 that as he raised his hand to strike, the axe seemed to throw itself from his grasp, exposing him to a fatal spear thrust.
             </p>
-            <p>   
+            <p class="saying">   
                 Halak rewards only the just.
             </p>
             <figure>
@@ -52,7 +40,7 @@
            </section>
            <section>
                <a name='Mimir'></a>
-           <h2>Mimir</h2>
+           <h2 id="name">Mimir</h2>
             <p>
                 God of memory and knowledge. He is the patron of the skjalds, and loves the accumulation of knowledge throughout the world. The skjalds don't believe in keeping knowledge and lore a secret, and believe it should be shared
                 with everyone who wants it. This doesn't mean they dont have personal secrets, or go around telling everybody everything they know, they will gladly share their sagas and epics with locals and foreigners alike.
@@ -74,14 +62,14 @@
            
            <section>
             <a name='&THORNhelenelok'></a>
-            <h2>&THORNelenelok</h2>
+            <h2 id="name">&THORNelenelok</h2>
             <p>
                 God of the Dead and the veneration of ancestors. Also of mead! Even though drinks like beer and wine are casually drank as a part of every day life, mead is only consumed as a part of funeral processions and celebrations of the 
                 honored dead. The brewing of mead is a scared art passed down amongst the Heralds of the Hall, an order of women who prepare the dead for burial and maintain their resting places. Mead is only drank on special occasions, where 
                 the bitterness of death is offset by the sweetness of the drink. Unlike in some primitive cultures, the Medven people do not believe one needs to die in battlein order to reach the afterlife. Once just has to reach the pinnacle of 
                 their chosen profession. 
             </p>
-            <p>    
+            <p class="saying">    
                 All are welcome in &THORNelenelok's halls, so long as they lived in accordance with their own ideals.
             </p>
             <figure>
